[package]
name = "httpql"
authors = ["KhulnaSoft Lab. <iconmamundentist@gmail.com>"]
description = "Parser for the HTTPQL language"
repository = "https://github.com/khulnasoft-lab/httpql"
license = "MIT"
version = "0.2.1"
edition = "2021"

[dependencies]
lazy_static = { version = "1" }
thiserror = { version = "1" }
pest = { version = "2" }
pest_derive = { version = "2" }
serde_json = { version = "1" }

[dev-dependencies]
regex = { version = "1.10" }
rstest = { version = "0.18" }
serde = { version = "1", features = ["derive"] }
